--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -34,7 +34,7 @@
 
     .app {
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background-color: rgba(36, 36, 36, 0.9);
         border-radius: 0px;
         border: none;
